--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -30,15 +30,19 @@
                 <h3><a href="">Bio</a></h3>
                 <img src="" alt="" />
                 <div id="bio-info" class="info-block">
-                    <p id="bio-descritpion" class="info-description"></p>
+                    <p id="bio-descritpion" class="info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris efficitur, dui vel accumsan cursus, ipsum velit feugiat nisl, non interdum leo odio quis arcu. Maecenas ornare ligula eget facilisis lacinia. Pellentesque tincidunt ornare
+                        ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin semper eros lorem, eu imperdiet metus convallis ut. In nec odio neque. Etiam sit amet sem condimentum, tempus dui sit amet, congue augue. Nulla luctus arcu
+                        sem, eget tincidunt lacus porttitor et. Aenean mollis elementum ante sed mattis. Sed vulputate vitae tellus vel molestie.</p>
                 </div>
             </div>
             <div id="skills" class="slideInfo-block">
                 <h3><a href="">Skills</a></h3>
-                <img src="" alt="" />
-                <p>
+                <img src="images/skills-logos/Excel-Logo.png" alt="Excel Logo" />
+                <img src="images/skills-logos/BusinessObjects-Logo.png" alt="Business Objects Logo" />
+                <img src="images/skills-logos/Teradata-Logo.png" alt="Teradata Logo" />
+                <img src="images/skills-logos/SQLServer-Logo.png" alt="SQL Server Logo" />
+                <img src="images/skills-logos/DB2-Logo.png" alt="DB2 Logo" />
 
-                </p>
             </div>
         </section>
         <section class="experience">
@@ -47,27 +51,57 @@
                 <h3><a href="">Current Experience</a></h3>
                 <img src="images/SiriusXM-Logo.png" alt="SirusXM Logo" />
                 <div id="current-info" class="info-block">
-                    <h4 id="current-header" class="info-header"></h4>
-                    <p id="current-descritpion" class="info-description"></p>
+                    <h4 id="current-header" class="info-header">Analyst, Campaign Development</h4>
+                    <h5 id="current-subheader" class="info-date">May 2015 - Present</h5>
+                    <ul id="current-descritpion" class="info-description-list">
+                        <li>Create SQL scripts for tables, views and data manipulation for the marketing team </li>
+                        <li>Design queries using Teradata Assistant to elicit relevant customer information for development of reports utilized by marketing in forecasting, trending and results analysis.</li>
+                        <li>Fulfilled customer segmentation and analysis requests within hierarchical database model</li>
+                        <li>Propose recommendations with respect to quality, correctness, and adherence to marketing standards</li>
+                        <li>Review proposed processes and solutions in order to identify technical feasibility</li>
+                        <li>Built marketing campaigns within Teradata CIM Aprimo</li>
+                        <li>Conduct root-cause analysis for campaigns that were under investigation and provided possible solutions</li>
+                    </ul>
                 </div>
             </div>
             <div id="past" class="slideInfo-block">
                 <h3><a href="">Past Experience</a></h3>
                 <img src="images/ParxCasino-Logo.png" alt="Parx Casino Logo" />
                 <div id="past-info" class="info-block">
-                    <h4 id="past-header" class="info-header"></h4>
-                    <p id="past-description" class="info-description"></p>
+                    <h4 id="past-header" class="info-header">Marketing Database Manager</h4>
+                    <h5 id="past-subheader" class="info-date">July 2008 - May 2015</h5>
+                    <ul id="past-description" class="info-description-list">
+                        <li>Develop training programs for and manage the Database Marketing team</li>
+                        <li>Author SQL scripts utilizing DBvisualizer and Teradata SQL Assistant</li>
+                        <li>Manage US Postal Service permits</li>
+                        <li>Design and implement segmentation rules and lists for all marketing campaigns</li>
+                        <li>Develop, test and deploy direct mail/email campaigns and initiatives</li>
+                        <li>Cultivate reports and analyze database campaign performance in all channels to pinpoint areas for growth potential</li>
+                        <li>Responsible for campaign production schedule and relationship development with relevant departments/vendors</li>
+                        <li>Manage database marketing budget and monthly financial reports totaling $1.8 million annually</li>
+                        <li>Responsible for submitting departmental purchase requests for all direct marketing related jobs</li>
+                        <li>Lead ad hoc project teams and act as a liaison between different departments to ensure projects stay on track, meet deadlines and are profitable</li>
+                        <li>Coordinate with creative team to ensure marketing campaigns are executed to specifications</li>
+                        <li>Monitor database hygiene and offer distribution</li>
+                        <li>Build strategy for and implement all system setups utilizing CMS for events, promotions and marketing programs</li>
+                        <li>Oversee adherence to gaming regulations, policies and procedures</li>
+                        <li>Direct system training involving new processes and technical procedures for all operations staff</li>
+
+                    </ul>
                 </div>
             </div>
         </section>
         <section class="contact">
             <h1>Contact</h1>
             <form action="" id="contact-form">
-                <input type="text" id="name-input">
-                <input type="email" id="email-input">
-                <input type="text" id="message-input">
+                <label for="name-input">Name:</label>
+                <input type="text" name="name" id="name-input">
+                <label for="email-input">E-mail:</label>
+                <input type="email" name="email" id="email-input">
+                <label for="maessage-input">Message:</label>
+                <textarea type="text" name="messgae" id="message-input"></textarea>
             </form>
-            <button id="submitFormButton"></button>
+            <button type="button" id="submitFormButton">Send</button>
         </section>
 
     </div>
@@ -80,6 +114,27 @@
     <!--build:js js/main.min.js -->
     <script src='js/main.js'></script>
     <!-- endbuild -->
+</body>
+
+</html>
+ail:</label>
+<input type="email" name="email" id="email-input">
+<label for="maessage-input">Message:</label>
+<textarea type="text" name="messgae" id="message-input"></textarea>
+</form>
+<button type="button" id="submitFormButton">Send</button>
+</section>
+
+</div>
+<footer class=footer>
+
+</footer>
+
+
+
+<!--build:js js/main.min.js -->
+<script src='js/main.js'></script>
+<!-- endbuild -->
 </body>
 
 </html>
