updates to html structure

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -25,8 +25,6 @@
             <h1>BRIAN PIELA</h1>
         </section>
         <section id="about" class="main-section">
-            <h1>About</h1>
-            <h3><a href="">Bio</a></h3>
             <div id="bio" class="slideInfo-block">
                 <img src="" alt="" />
                 <div id="bio-info" class="info-block">
@@ -35,19 +33,20 @@
                         sem, eget tincidunt lacus porttitor et. Aenean mollis elementum ante sed mattis. Sed vulputate vitae tellus vel molestie.</p>
                 </div>
             </div>
-            <h3><a href="">Skills</a></h3>
+            <div id="about-main" class="mainInfo-block">
+                <h1>About</h1>
+                <h3><a href="">Bio</a></h3>
+                <h3><a href="">Skills</a></h3>
+            </div>
             <div id="skills" class="slideInfo-block">
                 <img src="images/skills-logos/Excel-Logo.png" alt="Excel Logo" />
                 <img src="images/skills-logos/BusinessObjects-Logo.png" alt="Business Objects Logo" />
                 <img src="images/skills-logos/Teradata-Logo.png" alt="Teradata Logo" />
                 <img src="images/skills-logos/SQLServer-Logo.png" alt="SQL Server Logo" />
                 <img src="images/skills-logos/DB2-Logo.png" alt="DB2 Logo" />
-
             </div>
         </section>
         <section id="experience" class="main-section">
-            <h1>Experience</h1>
-            <h3><a href="">Current Experience</a></h3>
             <div id="current" class="slideInfo-block">
                 <img src="images/SiriusXM-Logo.png" alt="SirusXM Logo" />
                 <div id="current-info" class="info-block">
@@ -64,7 +63,11 @@
                     </ul>
                 </div>
             </div>
-            <h3><a href="">Past Experience</a></h3>
+            <div id="experience-main" class="mainInfo-block">
+                <h1>Experience</h1>
+                <h3><a href="">Current Experience</a></h3>
+                <h3><a href="">Past Experience</a></h3>
+            </div>
             <div id="past" class="slideInfo-block">
                 <img src="images/ParxCasino-Logo.png" alt="Parx Casino Logo" />
                 <div id="past-info" class="info-block">
