--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -122,7 +122,7 @@
 
     <!--build:js js/main.min.js -->
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src='js/main.js'></script>
+    <script src='js/main.min.js'></script>
 
     <!-- endbuild -->
 </body>
