--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -52,7 +52,7 @@
         </section>
         <section id="experience" class="main-section displayNone">
             <div id="current" class="slideInfo-block">
-                <img src="images/SiriusXM-Logo.png" alt="SirusXM Logo" />
+                <img class="experience-img" src="images/SiriusXM-Logo.png" alt="SirusXM Logo" />
                 <div id="current-info" class="info-block">
                     <h4 id="current-header" class="info-header">Analyst, Campaign Development</h4>
                     <h5 id="current-subheader" class="info-date">May 2015 - Present</h5>
@@ -73,7 +73,7 @@
                 <h3 class="slideInfo-link"><a href="#past">Past Experience</a></h3>
             </div>
             <div id="past" class="slideInfo-block">
-                <img src="images/ParxCasino-Logo.png" alt="Parx Casino Logo" />
+                <img class="experience-img" src="images/ParxCasino-Logo.png" alt="Parx Casino Logo" />
                 <div id="past-info" class="info-block">
                     <h4 id="past-header" class="info-header">Marketing Database Manager</h4>
                     <h5 id="past-subheader" class="info-date">July 2008 - May 2015</h5>
